# cutie-keyboard

./: CMakeLists.txt  README.md
debian/: control
src/: cutiekeyboard.cpp  cutiekeyboard.h  main.cpp
src/extensions/: input-method-v2.cpp  input-method-v2.h
src/qml/: KeyButton.qml  Keyboard.qml
src/qml/layouts/: DialPad.qml  en_US.qml
